Slow day, minor changes
Slow day, minor changes

--- a/test/classes.html
+++ b/test/classes.html
@@ -40,7 +40,7 @@
     div > div:nth-child(odd),
     div > div:nth-child(3n),
     div > div:nth-child(4n) {
-    color: #CCC;
+    color: #fff;
     }
     
     div > div:nth-child(odd) {
@@ -50,7 +50,7 @@
     div > div:nth-child(1) {
     position: sticky;
     top: 1px;
-    background: red;
+    background: #C4232B;
     
     color: #1a1a1a;
     }
@@ -178,17 +178,27 @@
   <div class="column-6">.p-container > .column-6</div>
 </div>
 <div class="p-container" id="hide-show-classes">
-  <div class="column-1">Hidden / Show classes</div>
-  <div class="column-2 hide-phone" style="background:#3E0074;color:#fff;">.hide-phone</div>
-  <div class="column-2 hide-tablet" style="background:#511981;color:#fff;">.hide-tablet</div>
-  <div class="column-2 hide-tab-x" style="background:#64328f;color:#fff;">.hide-tab-x</div>
-  <div class="column-2 hide-desktop" style="background:#774c9d;color:#fff;">.hide-desktop</div>
-  <div class="column-1 hide-big-desktop" style="background:#8b66ab;">.hide-big-desktop</div>
-  <div class="column-2 show-phone" style="background:#2A80F7;color:#fff;">.show-phone</div>
-  <div class="column-2 show-tablet" style="background:#3f8cf7;color:#fff;">.show-tablet</div>
-  <div class="column-2 show-tab-x" style="background:#5499f8;color:#fff;">.show-tab-x</div>
-  <div class="column-2 show-desktop" style="background:#69a6f9;color:#fff;">.show-desktop</div>
-  <div class="column-1 show-big-desktop" style="background:#7fb2fa;">.show-big-desktop</div>
+  <div class="column-1">Hide / Show classes</div>
+  <div class="column-2 hide-phone" style="background:#3E0074;color:#fff;">
+    <p>.hide-phone <span style="color: #C4232B;">:: hide if screen is < 480px</span></p>
+  </div>
+  <div class="column-2 hide-tablet" style="background:#511981;color:#fff;">
+    <p>.hide-tablet <span style="color: #C4232B;">:: hide if screen is < 767px</span></p>
+  </div>
+  <div class="column-2 hide-tab-x" style="background:#64328f;color:#fff;">
+    <p>.hide-tab-x <span style="color: #C4232B;">:: hide if screen is < 1023px</span></p>
+  </div>
+  <div class="column-2 hide-desktop" style="background:#774c9d;color:#fff;">
+    <p>.hide-desktop <span style="color: #C4232B;">:: hide if screen is < 1599px</span></p>
+  </div>
+  <div class="column-1 hide-big-desktop" style="background:#8b66ab;">
+    <p>.hide-big-desktop <span style="color: #000;">:: hide if screen is < 1919px</span></p>
+  </div>
+  <div class="column-2 show-phone" style="background:#2A80F7;color:#fff;">.show-phone :: show if screen is < 480px</div>
+  <div class="column-2 show-tablet" style="background:#3f8cf7;color:#fff;">.show-tablet :: show if screen is > 480px and < 767px</div>
+  <div class="column-2 show-tab-x" style="background:#5499f8;color:#fff;">.show-tab-x :: show if screen is > 768px and < 1023px</div>
+  <div class="column-2 show-desktop" style="background:#69a6f9;color:#fff;">.show-desktop :: show if screen is > 1024px and < 1599px</div>
+  <div class="column-1 show-big-desktop" style="background:#7fb2fa;">.show-big-desktop :: show if screen > 1599</div>
 </div>
 <div class="container">
   <p class="text-col-1" id="text-cols">Text Columns</p>
