--- a/test/classes.html
+++ b/test/classes.html
@@ -74,7 +74,7 @@
   <div class="column-1" style="background:#fff;color:green;">All of these "systems" utilize the ">" selector so nesting is possible.</div>
 </div>
 <div class="flex-container" id="flex">
-  <div class="column-1">Flex System
+  <div class="column-1 push-p">Flex System
     <p>
       These boxes (including this one) utilize <em>"display flex"</em>. A container with the class <code>".flex-container"</code> is needed to enable this flex "system".<br>The breakpoints for the flex boxses are <b>"max-width: 768px;"</b> and <b>"max-width: 480px;"</b>
       Please don't use in "real projects" yet as this is still under development.
@@ -107,7 +107,7 @@
   <div class="column-6">.flex-container > .column-6</div>
 </div>
 <div class="grid-container" id="grid">
-  <div class="column-1">Grid System
+  <div class="column-1 push-p">Grid System
     <p>
       These boxes (including this one) utilize <em>"display grid"</em>. A container with the class <code>".grid-container"</code> is needed to enable this grid "system".<br>The breakpoints for the grid system are the same as for <a href="#flex">flex</a>.
       Please don't use in "real projects" yet as this is still under development.<br><i>Devs notes:</i> Unfortunatly <code>"grid-column"</code> and <code>"grid-row"</code>
@@ -146,7 +146,7 @@
   <div class="column-6">.grid-container > .column-6</div>
 </div>
 <div class="p-container" id="p-container">
-  <div class="column-1">Percentage System
+  <div class="column-1 push-p">Percentage System
     <p>
       These boxes (including this one) utilize <em>percentage (%)</em>. A container with the class <code>".p-container"</code> is needed to enable this percentage "system".<br>The breakpoints for the percentage system are the same as for <a href="#flex">flex</a>.
       Please don't use in "real projects" yet as this is still under development.<br><i>Dev notes</i>: These boxes uses <code>"float: left;"</code> to align them side by side and have
@@ -178,7 +178,7 @@
   <div class="column-6">.p-container > .column-6</div>
 </div>
 <div class="p-container" id="hide-show-classes">
-  <div class="column-1">Hide / Show classes</div>
+  <div class="column-1 push-p">Hide / Show classes</div>
   <div class="column-2 hide-phone" style="background:#3E0074;color:#fff;">
     <p>.hide-phone <span style="color: #C4232B;">:: hide if screen is < 480px</span></p>
   </div>
@@ -201,7 +201,7 @@
   <div class="column-1 show-big-desktop" style="background:#7fb2fa;">.show-big-desktop :: show if screen > 1599</div>
 </div>
 <div class="container">
-  <p class="text-col-1" id="text-cols">Text Columns</p>
+  <p class="text-col-1 push-p" id="text-cols">Text Columns</p>
   <p class="text-col-1">.text-col-1</p>
   <p class="text-col-2">.text-col-2<br/>.text-col-2</p>
   <p class="text-col-3">.text-col-3<br/>.text-col-3<br/>.text-col-3</p>
@@ -211,7 +211,7 @@
   <!-- Wrapped-->
 </div>
 <div class="container">
-  <div class="text-col-1">Text Columns</div>
+  <div class="text-col-1 push-p">Text Columns</div>
   <div class="text-col-1">.text-col-1</div>
   <div class="text-col-2">.text-col-2<br>.text-col-2</div>
   <div class="text-col-3">.text-col-3<br/>.text-col-3<br/>.text-col-3</div>
