Colors and respective classes added
Colors and .bg- , .color- added.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,13 @@
 <a href="test/texts.html">Texts</a>
 </li>
 <li>
+<a href="test/links.html">Links</a>  
+</li>
+<li>
 <a href="test/classes.html">Classes</a>
+</li>
+<li>
+<a href="test/colors.html">Colors</a>
 </li>
 <li>
 <a href="test/layout.html">Layout</a>
