--- a/test/layout.html
+++ b/test/layout.html
@@ -32,8 +32,8 @@
       </div>
     </nav>
   </header>
-  <section>
-    <article>
+  <section class="grid-container">
+    <article class="column-2">
       <div>
         <h3>Section / Content</h3>
         <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta sed, non animi eos iure! Vero, aut, eos ipsa assumenda nobis necessitatibus. Cumque voluptatum, facere distinctio vero omnis mollitia dicta illum.</span><span>Omnis odit ut molestiae error vero, doloribus sint fugit exercitationem voluptatibus aperiam impedit a accusamus accusantium consectetur dolorum saepe rerum explicabo et. Tempora obcaecati architecto voluptas, molestias ipsum vero minima.</span><span>Nam, aut! Voluptatibus id iste architecto, alias hic minus enim culpa similique, optio perspiciatis repudiandae. Officia vitae tenetur beatae autem impedit quos repellendus optio ab excepturi eveniet sed, ratione libero.</span><span>Provident explicabo ducimus eligendi dolor ullam officiis, dolorem. Error, odio, vero. Autem aliquam earum nisi assumenda quae cum tempora ex accusamus ratione esse explicabo, maiores sapiente molestiae harum aliquid fugit.</span><span>Eius, non. Earum qui quasi, iste ab natus consectetur expedita voluptates nesciunt non enim magnam, ipsa cupiditate dignissimos eos recusandae tempore ipsum dolor aperiam laborum voluptatem. Eligendi, voluptate quo explicabo.</span></p>
@@ -43,10 +43,22 @@
         <p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta sed, non animi eos iure! Vero, aut, eos ipsa assumenda nobis necessitatibus. Cumque voluptatum, facere distinctio vero omnis mollitia dicta illum.</span><span>Omnis odit ut molestiae error vero, doloribus sint fugit exercitationem voluptatibus aperiam impedit a accusamus accusantium consectetur dolorum saepe rerum explicabo et. Tempora obcaecati architecto voluptas, molestias ipsum vero minima.</span><span>Nam, aut! Voluptatibus id iste architecto, alias hic minus enim culpa similique, optio perspiciatis repudiandae. Officia vitae tenetur beatae autem impedit quos repellendus optio ab excepturi eveniet sed, ratione libero.</span><span>Provident explicabo ducimus eligendi dolor ullam officiis, dolorem. Error, odio, vero. Autem aliquam earum nisi assumenda quae cum tempora ex accusamus ratione esse explicabo, maiores sapiente molestiae harum aliquid fugit.</span><span>Eius, non. Earum qui quasi, iste ab natus consectetur expedita voluptates nesciunt non enim magnam, ipsa cupiditate dignissimos eos recusandae tempore ipsum dolor aperiam laborum voluptatem. Eligendi, voluptate quo explicabo.</span></p>
       </div>
     </article>
-    <aside>
+    <aside class="column-4">
       <h3>Aside / Sidebar</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto corporis, aperiam iste sint recusandae. Debitis, eligendi blanditiis, voluptatibus aut dolore ratione aperiam impedit ipsum necessitatibus odio, sequi magnam, ex consequatur.</p>
     </aside>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
+    <article class="column-6">Test</article>
   </section>
   <footer>
     <div>
