--- a/test/layout.html
+++ b/test/layout.html
@@ -32,7 +32,7 @@
       </div>
     </nav>
   </header>
-  <section class="grid-container">
+  <section class="flex-container">
     <article class="column-2">
       <div>
         <h3>Section / Content</h3>
@@ -47,18 +47,6 @@
       <h3>Aside / Sidebar</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto corporis, aperiam iste sint recusandae. Debitis, eligendi blanditiis, voluptatibus aut dolore ratione aperiam impedit ipsum necessitatibus odio, sequi magnam, ex consequatur.</p>
     </aside>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
-    <article class="column-6">Test</article>
   </section>
   <footer>
     <div>
