--- a/test/classes.html
+++ b/test/classes.html
@@ -268,3 +268,9 @@
     .text-col-6
   </div>
 </div>
+<div class="flex-container" id="stretch-test">
+  <div class="column-1">STRETCH TESTS</div>
+  <div class="column-2">.column-2</div>
+  <div class="column-4">.column-4</div>
+  <div class="column-3">.column-3</div>
+</div>
