--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
     flex: 1;
   }
   .menu ul li a {
-    height: 100%;
+    height: 100px;
     width: 100%;
     display: block;
     float: left;
     text-align: center;
     text-decoration: none;
+    line-height: 100px;
     color: #333;
     font-size: 1rem;
-    padding-top: 200px;
+    border: 1px solid #CCC;
   }
   .menu ul li:nth-child(2n) a {
     background: #87D37C;
@@ -46,6 +47,7 @@
   .menu ul li a:hover {
     color: #f3f3f3;
     background: #333;
+    border-color: #333;
   }
 </style>
 </head>
