Started plugins.scss

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 <li>
 <a href="templates/temp1.html">Template 1</a>
 </li>
+<li>
+<a href="test/plugins.html">Plugins</a>
+</li>
 </ul>
 </div>
 </main>
