--- a/test/colors.html
+++ b/test/colors.html
@@ -1,66 +1,70 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1.00002" name="viewport">
-  <title>Lib</title>
-  <link href="../css/library.css" rel="stylesheet">
-</head>
-<div class="grid-container" id="colors">
-  <div class="column-1 bg-white push-p">
-    <p>.bg-white</p>
-  </div>
-  <div class="column-1 bg-gray push-p">
-    <p>.bg-gray</p>
-  </div>
-  <div class="column-1 bg-black push-p">
-    <p>.bg-black</p>
-  </div>
-  <div class="column-1 bg-red push-p">
-    <p>.bg-red</p>
-  </div>
-  <div class="column-1 bg-burntorange push-p">
-    <p>.bg-burntorange</p>
-  </div>
-  <div class="column-1 bg-crustred push-p">
-    <p>.bg-crustred</p>
-  </div>
-  <div class="column-1 bg-orange push-p">
-    <p>.bg-orange</p>
-  </div>
-  <div class="column-1 bg-caliorange push-p">
-    <p>.bg-caliorange</p>
-  </div>
-  <div class="column-1 bg-pink push-p">
-    <p>.bg-pink</p>
-  </div>
-  <div class="column-1 bg-purple push-p">
-    <p>.bg-purple</p>
-  </div>
-  <div class="column-1 bg-studiopurple push-p">
-    <p>.bg-studiopurple</p>
-  </div>
-  <div class="column-1 bg-blue push-p">
-    <p>.bg-blue</p>
-  </div>
-  <div class="column-1 bg-marineblue push-p">
-    <p>.bg-marineblue</p>
-  </div>
-  <div class="column-1 bg-deepblue push-p">
-    <p>.bg-deepblue</p>
-  </div>
-  <div class="column-1 bg-lightblue push-p">
-    <p>.bg-lightblue</p>
-  </div>
-  <div class="column-1 bg-green push-p">
-    <p>.bg-green</p>
-  </div>
-  <div class="column-1 bg-gossipgreen push-p">
-    <p>.bg-gossipgreen</p>
-  </div>
-  <div class="column-1 bg-salemgreen push-p">
-    <p>.bg-salemgreen</p>
-  </div>
-  <div class="column-1 bg-yellow push-p">
-    <p>.bg-yellow</p>
-  </div>
-</div>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.00002" name="viewport">
+    <title>Lib</title>
+    <link href="../css/library.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="grid-container" id="colors">
+      <div class="column-1 bg-white push-p">
+        <p>.bg-white</p>
+      </div>
+      <div class="column-1 bg-gray push-p">
+        <p>.bg-gray</p>
+      </div>
+      <div class="column-1 bg-black push-p">
+        <p>.bg-black</p>
+      </div>
+      <div class="column-1 bg-red push-p">
+        <p>.bg-red</p>
+      </div>
+      <div class="column-1 bg-burntorange push-p">
+        <p>.bg-burntorange</p>
+      </div>
+      <div class="column-1 bg-crustred push-p">
+        <p>.bg-crustred</p>
+      </div>
+      <div class="column-1 bg-orange push-p">
+        <p>.bg-orange</p>
+      </div>
+      <div class="column-1 bg-caliorange push-p">
+        <p>.bg-caliorange</p>
+      </div>
+      <div class="column-1 bg-pink push-p">
+        <p>.bg-pink</p>
+      </div>
+      <div class="column-1 bg-purple push-p">
+        <p>.bg-purple</p>
+      </div>
+      <div class="column-1 bg-studiopurple push-p">
+        <p>.bg-studiopurple</p>
+      </div>
+      <div class="column-1 bg-blue push-p">
+        <p>.bg-blue</p>
+      </div>
+      <div class="column-1 bg-marineblue push-p">
+        <p>.bg-marineblue</p>
+      </div>
+      <div class="column-1 bg-deepblue push-p">
+        <p>.bg-deepblue</p>
+      </div>
+      <div class="column-1 bg-lightblue push-p">
+        <p>.bg-lightblue</p>
+      </div>
+      <div class="column-1 bg-green push-p">
+        <p>.bg-green</p>
+      </div>
+      <div class="column-1 bg-gossipgreen push-p">
+        <p>.bg-gossipgreen</p>
+      </div>
+      <div class="column-1 bg-salemgreen push-p">
+        <p>.bg-salemgreen</p>
+      </div>
+      <div class="column-1 bg-yellow push-p">
+        <p>.bg-yellow</p>
+      </div>
+    </div>
+  </body>
+</html>
