--- a/test/forms.html
+++ b/test/forms.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="UTF-8">
-  <meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
-  <title>Lib</title>
-  <link href="../css/library.css" rel="stylesheet">
-  <style media="screen">
-    <![CDATA[
-    \.ie7 {
-    display: none !important;
-    }
-    ]]>
-  </style>
-</head>
-<form action="">
-  <fieldset>
-    <legend>Legend Test</legend>
-    <input type="text">
-    <input type="search">
-    <input type="button" value="Submit">
-    <button>Submit</button>
-    <input type="checkbox">
-    <input type="checkbox">
-    <input type="checkbox">
-    <input type="checkbox">
-    <input type="checkbox">
-    <input class="ie7" type="color">
-    <input type="date">
-    <input type="datetime-local">
-    <input type="email">
-    <input type="file">
-    <input alt="" src="" type="image">
-    <input type="month">
-    <input type="number">
-    <input type="radio">
-    <input type="radio">
-    <input type="radio">
-    <input type="radio">
-    <input type="radio">
-    <input max="10" min="0" type="range">
-    <input type="reset">
-    <select>
-      <option value="Test">Test</option>
-      <option value="Test 2">Test 2</option>
-    </select>
-    <textarea></textarea>
-  </fieldset>
-</form>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1.00002, shrink-to-fit=no" name="viewport">
+    <title>Lib</title>
+    <link href="../css/library.css" rel="stylesheet">
+    <style media="screen">
+      <![CDATA[
+      \.ie7 {
+      display: none !important;
+      }
+      ]]>
+    </style>
+  </head>
+  <body>
+    <form action="">
+      <fieldset>
+        <legend>Legend Test</legend>
+        <input type="text">
+        <input type="search">
+        <input type="button" value="Submit">
+        <button>Submit</button>
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+        <input class="ie7" type="color">
+        <input type="date">
+        <input type="datetime-local">
+        <input type="email">
+        <input type="file">
+        <input alt="" src="" type="image">
+        <input type="month">
+        <input type="number">
+        <input type="radio">
+        <input type="radio">
+        <input type="radio">
+        <input type="radio">
+        <input type="radio">
+        <input max="10" min="0" type="range">
+        <input type="reset">
+        <select>
+          <option value="Test">Test</option>
+          <option value="Test 2">Test 2</option>
+        </select>
+        <textarea></textarea>
+      </fieldset>
+    </form>
+  </body>
+</html>
